# finance_package

./: LICENSE  README.md  example.ipynb  pyproject.toml
finance_package/: __init__.py
