[tool.poetry]
name = "finance-package"
version = "0.1.0"
description = ""
authors = ["aliccima <alice.cima@usi.ch>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.4"
scipy = "^1.13.1"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
